corresponds to the "Position" select list orderings in the UI, and therefore
makes it much simpler to figure out where the error is. [David]

=item *

Output channels with includes can now be created via the output channel SOAP
interface. [David]

=item *

Fixed the category SOAP interface to support post-1.10 URIs that support paths
ending in a slash. [David]

=back

=head1 VERSION 1.10.0 (2006-01-23)

=head2 Improvements

=over

=item *

Eliminated letter graphics for "Published" and "Deployed" labels in story,
media, and template managers in favor of localizable characters. [David]

=item *

Moved the C<display_pages()> method from subclasses to
L<Bric::Util::Burner|Bric::Util::Burner>. Each subclass must implement a
C<display_element()> method for it to work; this means that it works for all
current burners except the HTML::Template burner, which manages pages
differently. This also fixed pagination issues in the Template Toolkit and PHP
burners. [David]

=item *

Completely updated L<Bric::Templates|Bric::Templates> and
L<Bric::AdvTemplates|Bric::AdvTemplates>, with expanded API documentation and
examples in Mason, Template Toolkit, and PHP. [David]

=item *

Refactored the left navigation code to perform better and be easier to
maintain. It now also sorts the admin menu items in alphabetical order by the
localized name of each. [David]

=item *

Updated the UI to fix Internet Explorer glitches. [Marshall]

=item *

The Element Type profile is now much smarter about displaying site
associations with an element type. If the user has access to only one site and
the element type is associated with no more than one site, then the "Sites"
section won't be displayed, but the primary output channel can be selected via
a radio button among the list of output channels. If the user has access to
more than one site or if the element type is associated with more than one
site, the "Sites" section will be displayed and the primary output channel can